--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,10 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+
+
+*.xml
+templates/
+codestyles/
+_mac/
