--- a/HW/1/CMakeLists.txt
+++ b/HW/1/CMakeLists.txt
@@ -2,3 +2,6 @@ add_subdirectory(A_Postfix)
 add_subdirectory(B_Olymp)
 add_subdirectory(C_Trucks)
 add_subdirectory(D_Brackets)
+add_subdirectory(E_March)
+add_subdirectory(F_Saloon)
+add_subdirectory(H_Min)
