Add whole for HW2

--- a/HW/2/CMakeLists.txt
+++ b/HW/2/CMakeLists.txt
@@ -2,3 +2,9 @@ add_subdirectory(A_Grasshopper)
 add_subdirectory(B_Horse)
 add_subdirectory(C_Horse_2)
 add_subdirectory(E_PDD)
+add_subdirectory(D_Calculator)
+add_subdirectory(F_Ones)
+add_subdirectory(G_Rabbit)
+add_subdirectory(H_Smooth_nums)
+add_subdirectory(I_Subseq)
+add_subdirectory(L_ATM)
